day1/nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  containers:
  - name: nginx
    image: nginx:alpine
