day1/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: myapp
spec:
  selector:
    app: nginx
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
